--- a/Student/laptopCSS.css
+++ b/Student/laptopCSS.css
@@ -26,8 +26,15 @@ body {
     font-size: 1.3vw;
 }
 
-#show:hover {
+#show:hover,
+#gmail:hover,
+#linkedIn:hover {
     cursor: pointer;
+}
+
+#gmail:hover,
+#linkedIn:hover {
+    opacity: 0.8;
 }
 
 div ul {
@@ -129,16 +136,36 @@ h2 {
 }
 
 video {
-    /* position: absolute;
-    left: 10vw; */
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
     max-width: 25vw;
     margin-bottom: 2vw;
+    margin-top: 2vw;
+    outline: 3px solid white;
+    outline-offset: -2px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#videoBack {
+    width: 100%;
+    height: max-content;
+    background-image: linear-gradient(180deg,
+            rgba(255, 255, 255, 0.5),
+            rgba(255, 255, 255, 0.75)), url('videoBack.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+/* video {
+    max-width: 25vw;
+    position: relative;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    border: 0.1vw solid #7f7f7f;
     outline: 4px solid white;
     outline-offset: -3px;
-}
+} */
 
 #sources,
 #game {
@@ -266,10 +293,33 @@ p {
 }
 
 .darkBack {
-    background-color: antiquewhite;
+    background-color: rgb(250, 235, 215);
     padding: 4vw 2vw;
 }
 
 .lightBack {
     padding: 4vw 2vw;
+}
+
+#gmail,
+#linkedIn {
+    width: 2vw;
+    height: 2vw;
+    border: 0.1vw solid #464646;
+    margin: 0.3vw;
+    border-radius: 20%;
+}
+
+#linkedIn {
+    margin-bottom: 3vw;
+}
+
+#contact {
+    width: max-content;
+    margin: 0 auto;
+    display: grid;
+    grid-template-areas: 'dropEmail gmail' 'connect LI';
+    align-items: center;
+    justify-items: center;
+    font-size: 1.2vw;
 }
