--- a/Student/mobileCSS.css
+++ b/Student/mobileCSS.css
@@ -312,6 +312,11 @@ p {
             font-size: 3.5vw;
         }
     }
+
+    #csAsChoice {
+        max-width: 60vw;
+        transform: translate(-50%, 30%);
+    }
 }
 
 @media screen and (orientation: landscape) {
@@ -480,6 +485,11 @@ p {
             font-size: 2.5vw;
         }
     }
+
+    #csAsChoice {
+        max-width: 40vw;
+        transform: translate(-50%, 30%);
+    }
 }
 
 
@@ -592,4 +602,10 @@ p {
     100% {
         opacity: 1;
     }
+}
+
+#csAsChoice {
+    position: relative;
+    left: 50%;
+    border: 0.1vw solid black;
 }
