--- a/Student/laptopCSS.css
+++ b/Student/laptopCSS.css
@@ -45,6 +45,7 @@ div ul {
     padding: 0;
     overflow: hidden;
     text-align: center;
+    animation: appear 0.1s linear forwards;
 }
 
 div ul li {
@@ -374,28 +375,6 @@ p {
 
     100% {
         font-size: 1.3vw;
-    }
-}
-
-@keyframes appear {
-    0% {
-        opacity: 0;
-    }
-
-    25% {
-        opacity: 0.25;
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-
-    75% {
-        opacity: 0.75;
-    }
-
-    100% {
-        opacity: 1;
     }
 }
 
